@@ -9,6 +9,7 @@ DIST gcr-3.34.0.tar.xz 1454244 BLAKE2B fc84e5eaa3b2822d1c04fff3b8b343de2655cce34
 DIST gcr-3.36.0.tar.xz 1025760 BLAKE2B 03f0d0ed40b600ed80e894111fedff3efcbbaaf6f261d6a44a3649a1acb50c4f35f3dc9a7ddb60f56cab241f68fef83aa5a02a94036e70a6556b35300f2c8fb5 SHA512 0431e7971b73accc62869c9497fcff7c111c453aa6a8ff25b42f19ceae1be0aec52e0e4eb504676f967c6e4f179198c15c521278690822e3457dbc5fe512fd5e
 EBUILD gcr-3.34.0-r1.ebuild 1980 BLAKE2B f780371ff0af217950dd796e10f86091d86c7c28f361fb65e4fc4325df55ac3d429ba8fe8683aac24157464fabc1b21bc65c2800d3693a1a63c219756654093a SHA512 255b395002d9f5e686490f38375b531806d45c50b424f4cab0d34e1d82717311109b88cd092a393c446faece25ae86a9acb9964c9dd38847810329a60e5da99a
 EBUILD gcr-3.34.0-r2.ebuild 1977 BLAKE2B 28bf00f46238aba5285c67f3ca84753c2a410f60967707848c250c2050de73b9ff55c66167a2d1cba78c4a7dbeecb6376044b7254061abfcf73f56a66d2d5835 SHA512 1ad963d31462e7d63937b1499e8a3bb23ceb3ea3d7358beb210ff902040fd4ea2c5bf35abb24883126345397bbbaa22b6394f8052852e76f23d26240c9e68835
+EBUILD gcr-3.36.0-r1.ebuild 2061 BLAKE2B 6b02ab8ee2a33b9ff5b134000f9eb0854d1ed21e3010402a4fe8e8295cdafe2256702621b48ab8bb45b8bc6cc19ba8aab89f35059c3d1fdbd97b5cd748acd648 SHA512 b0e1e908600fc6f57c22a96ae95286fcccfaaaa7e9cadb990e310dec47f89051a5f4910d51a9dea7da7f1c6ccb09b4553bc5f2518d836f0ed36b9794fb4fb569
 EBUILD gcr-3.36.0.ebuild 2020 BLAKE2B 7f905fc3e9bb99d5959a54bf1b3ece4c04df2e9411608c02f180d78a79976f9264ea1d814e7a7c60ff23f52ef43a78461125f728c33f94ad49dd2bb16c90b1e8 SHA512 f0425f08ad363797e1639d27937528bd660e9f3b3eb472f3ff9c1fade7aaa87fc800aa45f4c0659c99090c4e113665fb4517c7288ba8cb9fd0d8710ea9ab7dba
-MISC ChangeLog 373 BLAKE2B f232f3fa7c1ebad337dad4214ebea8d3b2a9894bbb8139611fc02376e7114b8cf0cb2d4a41990b8f2e188fa19325cfd96dbadf9b17c8d464ba1bb4172341628f SHA512 e2087cbaacc4d0f95bb49cc3ce7303f4afa09605a04f5cbfee425d7f52cce875d2affdc9eb91f2dd04945d9ac7214e9ffd21be864212704dd0dd2f67412b4675
+MISC ChangeLog 458 BLAKE2B f969a891b3563f5907f0fb96092bc5b5df2153bf2c4d0d4b1d2995a262cd6b7c328213023b4c7812768db80ebdc94ad4090590fc71ade88d7b34bd05d2f57873 SHA512 14776bb9a4b48fc29965a6bb9fac7feb0d1e66f6efbcec89754d795c16a7ad1cbde98c2d46e3eeb6dcbcc41540d7efae884ce31fb05e9ca5572c1a953b25dbe1
 MISC metadata.xml 249 BLAKE2B e71e1b95fee768c696704acbf7e3cf0e599ed2bc8de92bae0141d1194ef9e842bdc292798904487a9b90ddfda9b0e84abd3b76b1518576c1d288240e4e46f110 SHA512 c40662134899a5c9f0369a1017806f35adf3280a0b3c91726f7a8ca6012a073a8b471583f5bfb6fe95faac1dcf607e8e2e43f8c91d48ec46f4a8824e2f551506
